--- a/Default.yaml
+++ b/Default.yaml
@@ -47,8 +47,8 @@ dns:
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
   default-nameserver:
-    - 223.5.5.5
     - 114.114.114.114
+    - 223.5.5.5
   nameserver:
     - 223.5.5.5
     - 114.114.114.114
@@ -114,6 +114,25 @@ proxies:
     udp-relay-mode: native
     congestion-controller: bbr
     sni: azure.ayane.top
+  
+    #hysteria2
+  - name: "RN-H2"
+    type: hysteria2
+    server: 192.227.148.174
+    port: 22543
+    #  up和down均不写或为0则使用BBR流控
+    up: "200 Mbps" # 若不写单位，默认为 Mbps
+    down: "200 Mbps" # 若不写单位，默认为 Mbps
+    password: e24011b7-7ef9-4959-afe4-a61d4fdf84ba
+    # obfs: salamander # 默认为空，如果填写则开启obfs，目前仅支持salamander
+    # obfs-password: yourpassword
+    sni: rn.ayane.top
+    # skip-cert-verify: false
+    # fingerprint: xxxx
+    alpn:
+      - h3
+    # ca: "./my.ca"
+    # ca-str: "xyz"
 
 proxy-groups:
   - name: Proxy
@@ -123,6 +142,7 @@ proxy-groups:
       - DMIT-tuic
       - Azure-reality
       - Azure-tuic
+      - RN-H2
 
 
 rule-providers:
