--- a/Default.yaml
+++ b/Default.yaml
@@ -114,7 +114,22 @@ proxies:
     udp-relay-mode: native
     congestion-controller: bbr
     sni: azure.ayane.top
-  
+
+  - name: "RN-reality"
+    type: vless
+    server: 192.227.148.174
+    port: 11453
+    uuid: e24011b7-7ef9-4959-afe4-a61d4fdf84ba
+    network: tcp
+    tls: true
+    udp: true
+    flow: xtls-rprx-vision
+    servername: rn.ayane.top # REALITY servername
+    reality-opts:
+      short-id: 6ba85179e30d4fc2 # optional
+      public-key: ZblKN_n1H_nA6rIVmF1rnNBM8U7dTASvQNEUMrvWoBU
+    client-fingerprint: chrome # cannot be empty
+    
     #hysteria2
   - name: "RN-H2"
     type: hysteria2
@@ -143,6 +158,7 @@ proxy-groups:
       - Azure-reality
       - Azure-tuic
       - RN-H2
+      - RN-reality
 
 
 rule-providers:
