--- a/Default.yaml
+++ b/Default.yaml
@@ -59,6 +59,21 @@ dns:
 
 
 proxies:
+  - name: "V.PS-Tokyo-Reality"
+    type: vless
+    server: 195.245.241.160
+    port: 22805
+    uuid: 3ec1a8a8-af0a-4217-9abe-b4da268b6375
+    network: tcp
+    tls: true
+    udp: true
+    flow: xtls-rprx-vision
+    servername: www.lovelive-anime.jp # REALITY servername
+    reality-opts:
+      short-id: 6ba85179e30d4fc2 # optional
+      public-key: uB8X5KS1HEEDcw_MAHDBZmNRiLmTQdnQGBMHS5Jf2zE
+    client-fingerprint: chrome # cannot be empty
+    
   - name: "DMIT-reality"
     type: vless
     server: 154.17.29.173
