--- a/Default.yaml
+++ b/Default.yaml
@@ -57,7 +57,7 @@ dns:
       - 223.5.5.5
       - 114.114.114.114
 
-
+proxies:
   - name: "V.PS-Tokyo-Reality"
     type: vless
     server: 195.245.241.160
