--- a/Default.yaml
+++ b/Default.yaml
@@ -61,16 +61,16 @@ proxies:
   - name: "V.PS-Tokyo-Reality"
     type: vless
     server: 195.245.241.160
-    port: 20628
+    port: 18238
     uuid: d7245ca4-ef8a-4fc1-9ffc-659969dcf6b2
     network: tcp
     tls: true
     udp: true
     flow: xtls-rprx-vision
-    servername: www.lovelive-anime.jp # REALITY servername
+    servername: idolmaster-official.jp # REALITY servername
     reality-opts:
       short-id: 6ba85179e30d4fc2 # optional
-      public-key: NbF-AII8hcE4HGmcISyXMyjZThqIHlNB3Fg4KIj9TlU
+      public-key: MfHz8e-2PAOwH5V87X5oa4NFOY67FL_9iytsRgoKchQ
     client-fingerprint: chrome # cannot be empty
     
   - name: "DMIT-L.A.-Reality"
