--- a/Default.yaml
+++ b/Default.yaml
@@ -147,11 +147,19 @@ rule-providers:
     path: ./ruleset/GameDownload.yaml
     interval: 86400
 
+  OpenAI:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/OpenAI/OpenAI.yaml"
+    path: ./ruleset/OpenAI.yaml
+    interval: 86400
+
 
 rules:
   - RULE-SET,GameDownload,DIRECT
   - RULE-SET,steamCN,DIRECT
   - DOMAIN-SUFFIX,bing.com,Proxy
+  - RULE-SET,OpenAI,V.PS-Tokyo-Reality
   - RULE-SET,reject,REJECT
   - GEOSITE,category-ads,REJECT
   - RULE-SET,gfw,Proxy
