--- a/numberone.conf
+++ b/numberone.conf
@@ -16,7 +16,7 @@ dns-direct-fallback-proxy = true
 udp-policy-not-supported-behaviour = REJECT
 
 [Proxy Group]
-H = select,DIRECT,SHARON-TOKYO-REALITY,AKILE-TOKYO-REALITY,V.PS-TOKYO-REALITY,RN-SJC-REALITY,policy-select-name=RN-SJC-REALITY
+H = select,DIRECT,SHARON-TOKYO-REALITY,V.PS-TOKYO-REALITY,RN-SJC-REALITY,policy-select-name=RN-SJC-REALITY
 OpenAI = select,META,use=true,interval=86400,policy-select-name=SHARON-TOKYO-REALITY,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 AdBlock = select,DIRECT,REJECT,REJECT-DICT,REJECT-ARRAY,REJECT-200,REJECT-IMG,REJECT-TINYGIF,REJECT-DROP,REJECT-NO-DROP,policy-select-name=REJECT,interval=86400,timeout=5,select=6,url=http://www.gstatic.com/generate_204
 
