--- a/Default.yaml
+++ b/Default.yaml
@@ -169,12 +169,17 @@ rule-providers:
     path: ./ruleset/OpenAI.yaml
     interval: 86400
 
+  Bing:
+    type: http
+    behavior: classical
+    url: "https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Bing/Bing.yaml"
+    path: ./ruleset/Bing.yaml
+    interval: 86400
 
 rules:
-  - AND,((NETWORK,UDP),(DST-PORT,443)),REJECT
   - RULE-SET,GameDownload,DIRECT
   - RULE-SET,steamCN,DIRECT
-  - DOMAIN-SUFFIX,bing.com,Proxy
+  - RULE-SET,Bing,OpenAI
   - RULE-SET,OpenAI,OpenAI
   - RULE-SET,reject,REJECT
   - GEOSITE,category-ads,REJECT
