--- a/Default.yaml
+++ b/Default.yaml
@@ -70,16 +70,16 @@ proxies:
   - name: "Sharon-Tokyo-Reality"
     type: vless
     server: 157.254.198.115
-    port: 25829
-    uuid: f27ac7bd-f4f1-40bf-b79c-43ead850b3e8
+    port: 20677
+    uuid: e7af5636-0b2c-4876-83de-01fafbfc2933
     network: tcp
     tls: true
     udp: true
     flow: xtls-rprx-vision
-    servername: sharon.ayane.top # REALITY servername
+    servername: www.lovelive-anime.jp # REALITY servername
     reality-opts:
       short-id: 6ba85179e30d4fc2 # optional
-      public-key: FnqnFm_9HzM1gEmNGDtvE7KZl7MVUNqrmO6QxtPJ4TA
+      public-key: V6YF_1mdBq0U0BI6M8wFgyd536eqGUKhmYwgM2ahNkc
     client-fingerprint: chrome # cannot be empty
 
   - name: "V.PS-Tokyo-Reality"
