--- a/Default.yaml
+++ b/Default.yaml
@@ -57,19 +57,31 @@ dns:
   ipv6: false
   default-nameserver:
     - 223.5.5.5
+    - 119.29.29.29
   enhanced-mode: fake-ip
   fake-ip-range: 198.18.0.1/16
   fake-ip-filter-mode: blacklist
   fake-ip-filter:
-    - '*.lan'
+    - '*'
+    - '+.lan'
+    - '+.local'
+    - +.stun.*.*
+    - +.stun.*.*.*
+    - +.stun.*.*.*.*
+    - +.stun.*.*.*.*.*
   nameserver:
-    - https://doh.pub/dns-query
-    - https://dns.alidns.com/dns-query
+    - https://dns.google/dns-query
+    - https://1.1.1.1/dns-query
   fallback:
     - tls://8.8.4.4
     - tls://1.1.1.1
   proxy-server-nameserver:
-    - https://doh.pub/dns-query
+    - https://223.5.5.5/dns-query
+    - https://1.12.12.12/dns-query
+  nameserver-policy:
+    "geosite:cn,apple-cn,category-games@cn,private":
+      - 223.5.5.5
+      - 119.29.29.29
   direct-nameserver:
     - system
   direct-nameserver-follow-policy: false
@@ -169,6 +181,9 @@ rule-providers:
     interval: 86400
 rules:
 - IP-CIDR,10.10.9.9/32,DIRECT
+- DOMAIN-SUFFIX,chat.ayane.top,DIRECT
+- DOMAIN-SUFFIX,playerinfinite.com,Proxy
+- DOMAIN-SUFFIX,levelinfinite.com,Proxy
 - DOMAIN-SUFFIX,nodeseek.com,Proxy
 - DOMAIN-SUFFIX,emby.misakaf.org,Proxy
 - DOMAIN-SUFFIX,terraria.wiki.gg,Proxy
