--- a/Default.yaml
+++ b/Default.yaml
@@ -164,18 +164,23 @@ rule-providers:
     url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Game/GameDownload/GameDownload.yaml
     path: ./ruleset/GameDownload.yaml
     interval: 86400
-  Bing:
+  us:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Bing/Bing.yaml
-    path: ./ruleset/Bing.yaml
+    url: https://cdn.jsdelivr.net/gh/sakura0224/iSurge/Rule/us.yaml
+    path: ./ruleset/us.yaml
+    interval: 86400
+  nikke:
+    type: http
+    behavior: classical
+    url: https://cdn.jsdelivr.net/gh/sakura0224/iSurge/Rule/nikke.yaml
+    path: ./ruleset/nikke.yaml
     interval: 86400
 rules:
   - IP-CIDR,10.10.9.9/32,DIRECT
-  - DOMAIN-SUFFIX,playerinfinite.com,Proxy
-  - DOMAIN-SUFFIX,levelinfinite.com,Proxy
-  - DOMAIN-SUFFIX,nodeseek.com,Proxy
-  - DOMAIN-SUFFIX,hanime1.me,RN-SJC-Reality
+  # - DOMAIN-KEYWORD,civitai,Proxy
+  - RULE-SET,us,RN-SJC-Reality
+  - RULE-SET,nikke,Proxy
   - RULE-SET,GameDownload,DIRECT
   - RULE-SET,steamCN,DIRECT
   - RULE-SET,reject,AdBlock
